# flutter-setup

./: .pre-commit-config.yaml  Dockerfile  FEATURES.md  IMPLEMENTATION_SUMMARY.md  PRD.md  README.md  main.py  pyproject.toml  setup_flutter_mac.sh
.cursor/rules/: python.mdc
.devcontainer/: devcontainer.json
.github/workflows/: quality.yaml  testing.yaml
flutter_setup/: bootstrap.py  cli.py  config.py  core.py  exceptions.py  flutter_manager.py  prerequisites.py  project_creator.py
tests/: __init__.py  test_config.py
